--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
-    <p id="header">header</p>
+<div class="center">
+    <h1 id="header">header</h1>
     <nav>nav</nav>
     <aside>aside</aside>
-    <div>
+    <div class="realative">
         <section>section
-            <div>
+            <div class="absolute">
                 <article>article
                     <div>
-                        <h3>h1,h2,h3</h3>
+                        <p>h1,h2,h3</p>
                     </div>
                     <div>
                         <p>p</p>
@@ -30,6 +31,7 @@
     <div>
         <footer>footer</footer>
     </div>
+</div>
 </body>
 
 </html>
