--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="width">
 <div class="center">
     <h1 id="header">header</h1>
     <nav>nav</nav>
